fix font on mobile

--- a/style/main.css
+++ b/style/main.css
@@ -313,25 +313,27 @@ hr {
     z-index: 10;
     font-size: 0px; }
   .tile.tile-2 .tile-inner {
+    color: rgba(0, 0, 0, 0);
     background: url('../tile-sets/FrozenTiles_disney.wikia.com/1.jpg');
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
   .tile.tile-4 .tile-inner {
+    color: rgba(0, 0, 0, 0);
     background: url('../tile-sets/FrozenTiles_disney.wikia.com/2.jpg');
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
   .tile.tile-8 .tile-inner {
     color: rgba(0, 0, 0, 0);
     background: url('../tile-sets/FrozenTiles_disney.wikia.com/3.jpg'); }
   .tile.tile-16 .tile-inner {
-    color: #f9f6f2;
+    color: rgba(0, 0, 0, 0);
     background: url('../tile-sets/FrozenTiles_disney.wikia.com/4.jpg'); }
   .tile.tile-32 .tile-inner {
-    color: #f9f6f2;
+    color: rgba(0, 0, 0, 0);
     background: url('../tile-sets/FrozenTiles_disney.wikia.com/5.jpg');}
   .tile.tile-64 .tile-inner {
-    color: #f9f6f2;
+    color: rgba(0, 0, 0, 0);
     background: url('../tile-sets/FrozenTiles_disney.wikia.com/6.jpg'); }
   .tile.tile-128 .tile-inner {
-    color: #f9f6f2;
+    color: rgba(0, 0, 0, 0);
     background: url('../tile-sets/FrozenTiles_disney.wikia.com/7.jpg');
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.2381), inset 0 0 0 1px rgba(255, 255, 255, 0.14286);
     font-size: 45px; }
@@ -339,7 +341,7 @@ hr {
       .tile.tile-128 .tile-inner {
         font-size: 25px; } }
   .tile.tile-256 .tile-inner {
-    color: #f9f6f2;
+    color: rgba(0, 0, 0, 0);
     background: url('../tile-sets/FrozenTiles_disney.wikia.com/8.jpg');
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.31746), inset 0 0 0 1px rgba(255, 255, 255, 0.19048);
     font-size: 45px; }
@@ -347,7 +349,7 @@ hr {
       .tile.tile-256 .tile-inner {
         font-size: 25px; } }
   .tile.tile-512 .tile-inner {
-    color: #f9f6f2;
+    color: rgba(0, 0, 0, 0);
     background: url('../tile-sets/FrozenTiles_disney.wikia.com/9.jpg');
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.39683), inset 0 0 0 1px rgba(255, 255, 255, 0.2381);
     font-size: 45px; }
@@ -355,7 +357,7 @@ hr {
       .tile.tile-512 .tile-inner {
         font-size: 25px; } }
   .tile.tile-1024 .tile-inner {
-    color: #f9f6f2;
+    color: rgba(0, 0, 0, 0);
     background: url('../tile-sets/FrozenTiles_disney.wikia.com/10.jpg');
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.47619), inset 0 0 0 1px rgba(255, 255, 255, 0.28571);
     font-size: 35px; }
@@ -363,7 +365,7 @@ hr {
       .tile.tile-1024 .tile-inner {
         font-size: 15px; } }
   .tile.tile-2048 .tile-inner {
-    color: #f9f6f2;
+    color: rgba(0, 0, 0, 0);
     background: url('../tile-sets/FrozenTiles_disney.wikia.com/11.jpg');
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.55556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333);
     font-size: 35px; }
